guard a short server.version response in the desktop and terminal connection tests