@@ -660,8 +660,8 @@ public class ServerSettingsController extends SettingsDetailController {
 
     private void showConnectionSuccess(List<String> serverVersion, String serverBanner) {
         testConnection.setGraphic(getGlyph(FontAwesome5.Glyph.CHECK_CIRCLE, "success"));
-        if(serverVersion != null) {
-            testResults.setText("Connected to " + serverVersion.get(0) + " on protocol version " + serverVersion.get(1));
+        if(serverVersion != null && !serverVersion.isEmpty()) {
+            testResults.setText("Connected to " + serverVersion.getFirst() + (serverVersion.size() > 1 ? " on protocol version " + serverVersion.get(1) : ""));
             ServerCapability serverCapability = ElectrumServer.getServerCapability(serverVersion);
             if(serverCapability.supportsBatching()) {
                 testResults.setText(testResults.getText() + "\nBatched RPC enabled.");
